--- a/autoexperto/autoexperto/autoexpertoapp/templates/autos/crear.html
+++ b/autoexperto/autoexperto/autoexpertoapp/templates/autos/crear.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block titulo %} agregar nuevo auto {% endblock %}
+{% block titulo %} crear nuevo auto {% endblock %}
 
 {%block contenido%} 
 
