--- a/autoexperto/autoexperto/autoexpertoapp/templates/paginas/inicio.html
+++ b/autoexperto/autoexperto/autoexpertoapp/templates/paginas/inicio.html
@@ -4,12 +4,18 @@
 
 {%block contenido%}
 
-<div class="container">
-  <div class=row>
-    <div class=col-12>
-      contenido
-    </div>
-  </div>
+<div class="jumbotron">
+  <h1 class="display-3">autoexperto</h1>
+  <p class="lead">tu asisente para  vender o comprar auto </p>
+  <hr class="my-2">
+  <p>bienvenido a autoexperto </p>
+  <p class="lead">
+  <a class="btn btn-primary btn-lg" href="autos" role="button">ver nuestro catalogo </a>
+  
+    
+  </p>
 </div>
+
+
 
 {% endblock %}
