--- a/autoexperto/autoexperto/autoexpertoapp/templates/paginas/nosotros.html
+++ b/autoexperto/autoexperto/autoexpertoapp/templates/paginas/nosotros.html
@@ -3,8 +3,133 @@
 {% block titulo %} nosotros {% endblock %}
 
 {%block contenido%} 
+<div class="jumbotron">
+    <h1 class="display-3">autoexperto</h1>
+    <p class="lead">tu asisente para comprar auto  o vender  de manera segura </p>
+    <hr class="my-2">
+     <p>acerca de nosotros </p>
 
-contenido de nosotros 
+     <table class="table">
+      <thead>
+        <tr>consulta el estatus de tu auto 
+          <th> VIN </th>
+          <th> KILOMETRAJE </th>
+          <th> PLACAS </th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td scope="row"></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td scope="row"></td>
+          <td></td>
+          <td></td>
+        </tr>
+      </tbody>
+     </table>
+
+
+     <table class="table">
+      <thead>
+        <tr>cambio de propietario
+          <th> VIN </th>
+          <th> KILOMETRAJE </th>
+          <th> PLACAS </th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td scope="row"></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td scope="row"></td>
+          <td></td>
+          <td></td>
+        </tr>
+      </tbody>
+     </table>
+
+
+     <table class="table">
+      <thead>
+        <tr>cotizar seguro 
+          <th> seguros monterrey </th>
+          <th> axxa </th>
+          <th>  </th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td scope="row"></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td scope="row"></td>
+          <td></td>
+          <td></td>
+        </tr>
+      </tbody>
+     </table>
+
+
+     <table class="table">
+      <thead>
+        <tr>gestoria 
+          <th> placas </th>
+          <th> verificaciones </th>
+          <th> tenencia  </th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td scope="row"></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td scope="row"></td>
+          <td></td>
+          <td></td>
+        </tr>
+      </tbody>
+     </table>
+
+
+     <table class="table">
+      <thead>
+        <tr>revision vehicular o preavaluo 
+          <th> VIN </th>
+          <th> KILOMETRAJE </th>
+          <th> PLACAS </th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td scope="row"> </td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td scope="row"></td>
+          <td></td>
+          <td></td>
+        </tr>
+      </tbody>
+     </table>
+
+    <p class="lead">
+      <a class="btn btn-primary btn-lg" href="autos" role="button">ver nuestro catalogo </a>
+    </p>
+  </div>
+  
+  
+  
 
 
 {% endblock %}
