--- a/autoexperto/autoexperto/autoexpertoapp/templates/autos/form.html
+++ b/autoexperto/autoexperto/autoexpertoapp/templates/autos/form.html
@@ -6,8 +6,15 @@
 
 <form enctype="multipart/form-data" method="post">   
 
+ <div class="form-group">
+   <label for="">auto</label>
+   <input type="text" class="form-control" name="" id="" aria-describedby="helpId" placeholder="ejem ,ford, renault,mazada,etc">
+    <small id="helpId" class="form-text text-muted">ingresar datos del auto</small>
+ </div>
+  
+
 <div class="form-group">
-  <label for="">nombre</label>
+  <label for="">marca</label>
   
   <input type="text"
     class="form-control" name="" id="" aria-describedby="helpId" placeholder="nombre">
