--- a/autoexperto/autoexperto/autoexpertoapp/templates/base.html
+++ b/autoexperto/autoexperto/autoexpertoapp/templates/base.html
@@ -9,18 +9,20 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
  
 <nav>
+  <img src='{% static "img/logoautoexpertonoegroblacofonodrojo.jpeg"%}' width="120" alt="logo">
   <nav class="nav justify-content-center">
     <a class="nav-link ac tive" href="{% url 'inicio' %}">inicio</a>
     <a class="nav-link" href="{% url 'nosotros' %}">nosotros</a>  
     <a class="nav-link" href="{% url 'autos' %}">autos</a>
-      <a class="nav-link" href="{% url 'form' %}">form</a>
+    <a class="nav-link" href="{% url 'contacto' %}">contacto</a>
+    
+    
   </nav>
-</nav>    
- 
+</nav>
 <div class="container">
   <div class=row>
     <div class=col-12>
-     {% block contenido %}   contenido  
+     {% block contenido %}   contenido   
     </div>
   </div>
 </div>
@@ -39,7 +41,7 @@
   </div>
 </body>
 </html>
-{% endblock %}
+
 
   
 
@@ -47,4 +49,5 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
 <script src="script.js"></script>
+{% endblock %}
 </body>
