--- a/autoexperto/autoexperto/autoexpertoapp/templates/autos/index.html
+++ b/autoexperto/autoexperto/autoexpertoapp/templates/autos/index.html
@@ -2,7 +2,7 @@
 
 {% block titulo %} index {% endblock %}
 
-{%block contenido%} contenido 
+{%block contenido%} 
 
 <div class="card">
     <div class="card-header">
@@ -30,7 +30,6 @@
               
               
 
-              <th> acciones </th>
 
 
               </tr>
