--- a/autoexperto/autoexperto/autoexpertoapp/templates/paginas/contacto.html
+++ b/autoexperto/autoexperto/autoexpertoapp/templates/paginas/contacto.html
@@ -8,10 +8,32 @@
     <p class="lead">tu asisente para comprar auto  o vender  de manera segura </p>
     <hr class="my-2">
      <p>contacto</p>
-     <p> si deseas comprar o  publicar tu auto  llama al numero  127839392 y un asesor se pondra en contacto con usted </p>
-
-
-
+     <p> si deseas comprar o  publicar tu auto  llama al numero  y un asesor se pondra en contacto con usted</p>
+     
+    <table class="table">
+        <thead>
+            <tr>SEDES
+                <th>QUINTANA RRO</th>
+                <th>CDMX</th>
+                <th>HIDALGO</th>
+                <th>ESTADO DE MEXICO</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td scope="row">12293030</td>
+                <td>20202020</td>
+                <td>39393093</td>
+                <td>29292303</td>
+            </tr>
+            <tr>
+                <td scope="row"></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </tbody>
+    </table>
+    
 
 
      {% endblock %}
