--- a/autoexperto/autoexperto/autoexpertoapp/templates/paginas/inicio.html
+++ b/autoexperto/autoexperto/autoexpertoapp/templates/paginas/inicio.html
@@ -5,12 +5,26 @@
 {%block contenido%}
 
 <div class="jumbotron">
-  <h1 class="display-3">autoexperto</h1>
-  <p class="lead">tu asisente para  vender o comprar auto </p>
+  <h1 class="display-3">AutoExperto</h1>
+  <p class="lead">TU COPILOTO EN GESTION AUTOMOTRIZ</p>
   <hr class="my-2">
-  <p>bienvenido a autoexperto </p>
+  <P></P>
   <p class="lead">
   <a class="btn btn-primary btn-lg" href="autos" role="button">ver nuestro catalogo </a>
+
+
+  <p> VENDE TU AUTO  </p>  <li> </li>
+
+  <p>PRUEBA DE MANEJO </p>  <li> </li>
+
+  <p> PROMOCIONES </p>  <li>  </li>
+  
+<p>
+  mapa de ubicacion
+ 
+</p>
+  
+
   
     
   </p>
