--- a/autoexperto/autoexperto/autoexpertoapp/templates/paginas/contacto.html
+++ b/autoexperto/autoexperto/autoexpertoapp/templates/paginas/contacto.html
@@ -1,17 +1,17 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block titulo %} contacto {% endblock %}
 
 {%block contenido%} 
 <div class="jumbotron">
-    <h1 class="display-3">autoexperto</h1>
-    <p class="lead">tu asisente para comprar auto  o vender  de manera segura </p>
+    <h1 class="display-3">AUTOEXPERTO</h1>
+    <p class="lead">TU COPILOTO EN GESTION AUTOMOTRIZ</p>
     <hr class="my-2">
      <p>contacto</p>
-     <p> si deseas comprar o  publicar tu auto  llama al numero  y un asesor se pondra en contacto con usted</p>
-     
-    <table class="table">
-        <thead>
+     <p> si deseas comprar o  publicar tu auto contactanos via whastApp y un asesor se pondra en contacto con usted</p>
+         <table class="table">
+            <thead>
             <tr>SEDES
                 <th>QUINTANA RRO</th>
                 <th>CDMX</th>
@@ -33,8 +33,5 @@
             </tr>
         </tbody>
     </table>
-    
-
-
-     {% endblock %}
+{% endblock %}
 
