--- a/autoexperto/autoexperto/autoexpertoapp/templates/paginas/inicio.html
+++ b/autoexperto/autoexperto/autoexpertoapp/templates/paginas/inicio.html
@@ -5,7 +5,7 @@
 {%block contenido%}
 
 <div class="jumbotron">
-  <h1 class="display-3">AutoExperto</h1>
+  <h1 class="display-3">AUTOEXPERTO</h1>
   <p class="lead">TU COPILOTO EN GESTION AUTOMOTRIZ</p>
   <hr class="my-2">
   <P></P>
